--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,26 @@
     margin-bottom: 30px;
 }
 
+.navbar-light .navbar-nav .nav-link {
+    color: #777;
+}
 nav ul a {
     color: rgb(46, 46, 46);
     font-family: Arial, Helvetica, sans-serif
 }
+
+.nav-item {
+    border-right: 1px solid #EEEFF0;
+}
+
+.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link{
+    color: #47BEDB;
+}
+
+nav li a:hover {
+    color: #47BEDB!important;
+}
+
 
 /* Main content styles
 -------------------------------------------------- */
@@ -61,12 +77,16 @@ html {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 60px; /* Set the fixed height of the footer here */
+    height: 70px!important; /* Set the fixed height of the footer here */
     line-height: 60px; /* Vertically center the text there */
-    background-color: #f5f5f5;
+    background-color: #777;
     text-align: center;
+    border-top: 10px solid #47BEDB;
 }
   
+.text-muted {
+    color: #fff!important;
+}
   
   /* Custom page CSS
   -------------------------------------------------- */
@@ -92,4 +112,48 @@ body {
 .container-fluid {
     padding-left: 0px;
     padding-right: 0px;
+}
+
+  
+  /* Portfolio CSS
+  -------------------------------------------------- */
+.port-image {
+    width: 27%;
+
+    text-align: center;
+}
+
+.port-img-size {
+    width: 100%;
+    height: 300px;
+}
+
+.port-h3 {
+    background-color: #47bedb;
+    color: #fff;
+    padding: 10px;
+    position: relative;
+    bottom: 90px;
+}
+
+  /* Contact CSS
+  -------------------------------------------------- */
+
+.btn-primary {
+    background-color: #47bedb;
+    border: none;
+}
+.btn-primary:hover {
+    background-color: transparent;
+    color: #47bedb;
+    border: 1px solid #47bedb;
+}
+.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle {
+    background-color: transparent;
+    color: #47bedb;
+    border: 1px solid #47bedb;
+}
+
+label {
+    color:#777;
 }
